# bookmark-searcher

./: Makefile  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  Makefile  atlas.hcl  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: auth.py  bookmarks.py  root.py  search.py
backend/app/api/middleware/: auth.py  logging.py
backend/app/api/schemas/: generated.py
backend/app/db/: connection.py
backend/app/db/schema/: init-db.sql  schema.sql
backend/app/repositories/: bookmark.py  chunk.py  user.py
backend/app/services/: embedding.py  embedding_model.py  scraping.py
backend/app/utils/: auth.py  google.py  password.py
backend/tests/: test_main.py
backend/tests/repositories/: conftest.py  test_bookmark.py  test_chunk.py  test_user.py
backend/tests/services/: test_scraping.py
frontend/: .env.sample  Dockerfile  docker-compose.yml  index.html  orval.config.ts  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/api/: generated.ts
frontend/src/components/: Authentication.tsx  BookmarkList.tsx  BookmarkSearch.tsx  LoginForm.tsx  LogoutButton.tsx
frontend/src/hooks/: useAuthCheck.ts  useCreateBookmark.ts  useGetBookmarks.ts  useGoogleLogin.ts  useLogin.ts  useLogout.ts  useRegister.ts  useSearchBookmarks.ts
frontend/src/utils/: orval-mutator.ts
schema/: Makefile  redocly.yaml  schema.yml
